# ollama-rs

./: Cargo.toml  README.md  justfile
examples/: chat.rs  completion.rs
src/: error.rs  lib.rs
src/generation/: mod.rs
src/generation/chat/: message.rs  mod.rs  request.rs  response.rs  role.rs
src/generation/completion/: mod.rs  request.rs  response.rs
