[package]
name = "ollama"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio-stream = "0.1"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros"] }
